feat: implement tabwise selection for all inspections